[package]
name = "laplade"
version = "0.1.0"
edition = "2021"
authors = ["laplade"]
description = "RPN(Reverse Polish Notatio) library"
license = "MIT"
edition = "2021"
include = ["src/", "README.md"]
homepage = "https://github.com/kujirahand/book-rust/tree/main/src/ch4/rpn_calc/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
