[package]
name = "laplade"
version = "0.1.1"
edition = "2021"
authors = ["laplade"]
description = "RPN(Reverse Polish Notatio) library"
license = "MIT"
include = ["src/", "README.md"]
homepage = "https://github.com/Laplade/laplade"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
